samples/_failures_safe/1761401612_7e4589_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45d04310.c: In function ‘main’:
./samples/SAFE/__tmp_45d04310.c:169:5: error: expected declaration or statement at end of input
  169 |     printf("Enter arithmetic expression: ");
      |     ^~~~~~
